fixed vertical spacing

--- a/main.css
+++ b/main.css
@@ -45,7 +45,7 @@ main {
   display: flex;
   justify-content: space-between;
 
-  margin-top: 15vh;
+  margin-top: 80px;
 }
 
 main > div:first-child {
